// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StyledButton /> Should render inverted button and match the snapshot 1`] = `
.c0 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #FFFFFF;
  color: #107969;
  border: 1px solid #107969;
  cursor: default;
  color: #9AA1B6;
  border-color: #9AA1B6;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
}

<div>
  <button
    class="c0"
    color="primary"
    disabled=""
    radius="100px"
  />
</div>
`;

exports[`<StyledButton /> Should render styled button and match the snapshot 1`] = `
.c0 {
  width: 100%;
  height: 40px;
  border-radius: 100px;
  cursor: pointer;
  border: none;
  outline: none;
  background-color: #107969;
  color: #FFFFFF;
  -webkit-transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
  transition: background-color 300ms ease,color 300ms ease,border 300ms ease;
}

<div>
  <button
    class="c0"
    color="primary"
    radius="100px"
  />
</div>
`;
